# protofish-rs

./: Cargo.toml
.github/workflows/: ci.yml  discord.yml
protofish/: Cargo.toml
protofish/src/: constant.rs  error.rs  lib.rs  macros.rs  schema.rs
protofish/src/core/: mod.rs  tests.rs
protofish/src/core/client/: client.rs
protofish/src/core/common/: arbitrary.rs  connection.rs  context.rs  counter.rs  error.rs  mod.rs  pmc.rs  recv_stream.rs  send_stream.rs  stream.rs
protofish/src/core/server/: accept.rs  client_handle.rs  handshake.rs  mod.rs  token.rs
protofish/src/internal/: pmc_frame.rs  serialize.rs
protofish/src/schema/common/: schema.rs  transform.rs
protofish/src/schema/payload/: schema.rs  transform.rs
protofish/src/utp/: error.rs  mod.rs  protocol.rs  tests.rs
protofish/src/utp/tests/: duplex.rs  stream.rs  utp.rs
protofish/tests/: protofish.rs
quicfish/: Cargo.toml  README.md
quicfish/benches/: throughput.rs
quicfish/src/: config.rs  connection.rs  datagram.rs  endpoint.rs  error.rs  lib.rs  stream.rs
quicfish/tests/: common.rs  integration_tests.rs
