[package]
name = "protofish"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
async-trait = "0.1.89"
bytes = "1.10.1"
dashmap = "6.1.0"
parking_lot = "0.12.4"
prost = "0.14.1"
prost-types = "0.14.1"
rand = "0.9.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"

[build-dependencies]
prost-build = "0.14.1"
walkdir = "2.5.0"
